--- a/assets/scss/modules/index.css
+++ b/assets/scss/modules/index.css
@@ -38,7 +38,7 @@
   align-items: center;
   width: 100%;
   font-family: Avenir;
-  font-size: 30px;
+  font-size: min(8vw,50px);
   color: white;
   text-align: center;
   position: relative;
